--- a/css/index.css
+++ b/css/index.css
@@ -350,3 +350,12 @@ img {
   background: #FFFFFF;
   color: #17A2B8;
 }
+aside {
+  border-radius: 1em;
+  padding: 1em;
+  transform-origin: 0 0;
+  transition: transform 0.6s;
+}
+.large {
+  transform: scale(1.9);
+}
