--- a/less/home-page.less
+++ b/less/home-page.less
@@ -112,3 +112,16 @@
     }
   }
 }// home
+aside {
+  // background: #fe9;
+  border-radius: 1em;
+  // display: inline-block;
+  padding: 1em;
+  // transform: scale(.9);
+  transform-origin: 0 0;
+  transition: transform .6s;
+}
+
+.large {
+  transform: scale(1.9);
+}
